# OLox

./: .ocamlformat  README.md  TODO.md  demo.lox  dune-project  olox.opam
_build/: .db  .digest-db  log
_build/default/: olox.dune-package  olox.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: olox.cma  olox.cmxa  olox.cmxs
_build/default/lib/.merlin-conf/: lib-olox
_build/default/lib/.olox.objs/byte/: olox.cmi  olox.cmo  olox.cmt
_build/default/lib/.olox.objs/native/: olox.cmx
_build/default/test/.merlin-conf/: exe-test_olox
_build/default/test/.test_olox.eobjs/byte/: dune__exe__Test_olox.cmi  dune__exe__Test_olox.cmti
_build/default/test/.test_olox.eobjs/native/: dune__exe__Test_olox.cmx
_build/install/default/lib/olox/: META  dune-package  opam
lib/: ast.ml  benchmark.ml  callable.ml  dune  environment.ml  error.ml  expression.ml  interpreter.ml  lexer.ml  options.ml  parser.ml  resolver.ml  statement.ml  types.ml  value.ml
test/: dune
