(library
 (public_name olox)
 (name olox)
 (modules 
   error
   types
   value  
   environment
   lexer
   expression
   parser
   statement
   resolver
   ast
   interpreter
   options
   version
   )
 (ocamlopt_flags 
   (:standard -O3 -unbox-closures -unbox-closures-factor 20 -inline 1000 -inline-max-unroll 10)))
